Remove MongoDB URI from .env file
Cleared MongoDB URI in the environment file for security.

--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ ADMIN_EMAIL = "admin@example.com"
 ADMIN_PASSWORD = "prescripto123"
 
 # MongoDB Setup ( required )
-MONGODB_URI = "mongodb+srv://sahilrawat2508:001002003@cluster0.uzdqywt.mongodb.net"
+MONGODB_URI = ""
 
 # Cloudinary Setup ( required )
 CLOUDINARY_NAME = "dtg5on0yh"
