Update MongoDB URI in .env file

--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ ADMIN_EMAIL = "admin@example.com"
 ADMIN_PASSWORD = "prescripto123"
 
 # MongoDB Setup ( required )
-MONGODB_URI = ""
+MONGODB_URI = "na"
 
 # Cloudinary Setup ( required )
 CLOUDINARY_NAME = "dtg5on0yh"
